# e2ee

./: .gitattributes  .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt
backend/include/: base64.h  db.h  server.h  util.h
backend/include/handlers/: get_identity.h  identity.h  new_identity.h  prekey_bundle.h  websocket.h
backend/src/: base64.c  db.c  main.c  server.c  util.c
backend/src/handlers/: get_identity.c  identity.c  new_identity.c  prekey_bundle.c  websocket.c
frontend/: .prettierrc.ts  components.json  package.json  tsconfig.json
frontend/components/: new-conversation-modal.tsx
frontend/scripts/: build.ts
frontend/src/: app.tsx  global.d.ts  index.css  index.html  index.tsx  sw.ts
frontend/src/components/: message-bubble.tsx  message-input.tsx  new-conversation-modal.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/lib/: api.ts  crypto.ts  db.ts  protocol.ts  storage.ts  utils.ts
frontend/src/views/: home.view.tsx  not-found.tsx  register.view.tsx  test.view.tsx
proto/: messages.proto  secret.proto  websocket.proto
rs-crypto/: Cargo.toml  build.rs
rs-crypto/include/: crypto.h
rs-crypto/src/: lib.rs
scripts/: build.sh  gen-proto.sh  gen-sig-keys.sh  sign-assets.sh
